--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ The animation should take 5 seconds and only happen when the page is loaded. */
     animation-name: logo;
     animation-duration: 5s;
 }
+/* 會反彈？？ */
 
 /* step 2 
 Edit the body element to use the Poppins font (using Google fonts) with serif as a backup.  It should also use the image “concrete_seamless.png” as a background-image with a backup color of #f1f1f1.
@@ -61,7 +62,7 @@ solid 2px border using #45ADAD,
     background: #288088;
     border: solid 2px #45ADAD;
     padding: 20px 0;
-    border-radius: 50px 50px 0 0
+    border-radius: 50px 50px 0 0;
 }
 
 /* step 7
@@ -144,15 +145,21 @@ Modify the first header (the one not inside main) so that it remains visible at 
     }
 }
 
+/* @media (min-width: 1200px)  { */
 @media print {
     body {
         font-family: Arial, Helvetica;
         background-image: none;
     }
+    header {
+        display: flex;
+        flex-direction: column;
+    }
     .nav_links {
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: space-around;
+        align-items: center;
     }
     .pricing {
         display: flex;
@@ -164,7 +171,8 @@ Modify the first header (the one not inside main) so that it remains visible at 
         border: 2px solid #45ADDD;
         flex-basis: 325px;
     }
-    .gallery {
+    .gallery, #gallery {
         display: none;
     }
+
 }
